--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -17,15 +17,17 @@ status-website:
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   # cname: demo.upptime.js.org
   baseUrl: /myuptime
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: myuptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  logoUrl: https://ichengchao.oss-cn-hangzhou.aliyuncs.com/static/image/login_logo.png
+  name: ichengchao
+  introTitle: "**ichengchao** status"
+  introMessage: [**chengchao.name**](https://www.chengchao.name)
   navbar:
     - title: Status
       href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+    - title: Home
+      href: https://www.chengchao.name
+    - title: Blog
+      href: https://blog.chengchao.name
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
